--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   native_exif: ^0.7.0
   path_provider: ^2.1.2
   path: ^1.9.0
-
+  gal: ^2.3.0
   intl: ^0.20.2
 
 dev_dependencies:
